--- a/web/style.css
+++ b/web/style.css
@@ -1,3 +1,6 @@
+body, html {
+  font-family: 'Montserrat', sans-serif;
+}
 .pure-img-responsive {
     max-width: 100%;
     height: auto;
@@ -17,13 +20,19 @@
 /**
  * Header
  */
+.header {
+  background-color: #E03A4D;
+}
+
 .home-menu {
-    background-color: white;
     position: relative;
     display: flex;
+    max-width: 960px;
+    margin: 0 auto;
+    position: relative;
 }
 .home-menu .pure-menu-heading a {
-    color: #E03A4D;
+    color: white;
     text-decoration: none;
     align-items: center;
     display: flex;
@@ -32,14 +41,37 @@
     font-size: 1.5em;
 }
 .home-menu .pure-menu-list a {
-    color: #25333A;
+    color: white;
     text-decoration: none;
 }
 .logo-wrapper {
     float: left;
     margin-top: 10px;
+    height: 100px;
+    width: 100px;
+    overflow: hidden;
+    position: relative;
     background-color: white;
     border-radius: 50%;
+    margin-right: 10px;
+}
+.logo-wrapper img {
+  position: absolute;
+  left: 10px;
+  left: 3px;
+  top: 5px;
+  width: 95px;
+}
+.home-menu .pure-menu-link:hover {
+  background-color: white;
+  color: #E03A4D;
+}
+
+.home-menu .pure-menu-link {
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 5px;
+  margin-right: 6px;
 }
 @media screen and (max-width: 537px) {
     .home-menu .pure-menu-item {
@@ -64,6 +96,24 @@
 }
 
 /**
+ * Home app picture
+ */
+.app-container {
+    text-align:center;
+    margin-top: 48px;
+    position: relative;
+    top: -200px;
+    margin-bottom: -200px;
+    z-index: 1;
+}
+.app-container img {
+    position: relative;
+    max-width: 1080px;
+    margin: auto;
+    width: 100%;
+}
+
+/**
  * Footer
  */
 footer {
@@ -82,14 +132,11 @@ footer a {
  * Content
  */
 .content {
-    padding: 4em 2em;
+    padding: 2em 2em;
 }
 .content-head {
     color: #E03A4D;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    margin: 0 0 3em 0;
+    font-size: 2em;
 }
 .content-subhead {
     color: #E03A4D;
@@ -101,18 +148,23 @@ footer a {
  * Jumbotron
  */
 .jumbotron {
+    position: relative;
     color: white;
     background-color: #E03A4D;
-    padding: 2em;
+    padding-bottom: 10em;
     text-align: center;
+}
+.jumbotron-inner {
+  max-width: 960px;
+  margin: 0 auto;
 }
 .jumbotron h1 {
     display: inline-block;
-    border: 1px solid white;
     border-radius: 2px;
-    padding: 1em;
-    margin: 1em 0 1em 0;
     text-align: center;
+    font-size: 3em;
+    margin-top: 2em;
+    margin-bottom: 0.5em;
 }
 .jumbotron a {
     color: white;
@@ -122,29 +174,43 @@ footer a {
     margin: 0 auto;
     text-align: center;
     font-size: 1.2em;
-    max-width: 900px;
+    line-height: 1.2em;
+    box-sizing: content-box;
+    padding: 10px;
 }
-.jumbotron q:before,
-.jumbotron q:after {
-    font-size: 2em;
+.jumbotron .action:hover {
+  color: #56B68B;
 }
 .jumbotron .action {
     display: inline-block;
-    margin-top: 3em;
-}
-@media screen and (min-width: 768px) {
-    .jumbotron {
-        padding: 5em;
-    }
-    .jumbotron h1 {
-        padding: 3em;
-        margin: 2em 0 3em 0;
-    }
-}
+    margin: 2em 0 1em;
+    font-size: 2.5em;
+    text-decoration: none;
+    background-color: white;
+    border: 3px solid white;
+    color: #E03A4D;
+    border-radius: 10px;
+    padding: 18px;
 
+}
+@media screen and (max-width: 860px) {
+    .jumbotron h1 {
+        font-size: 2em;
+        margin-top: 1em;
+    }
+    .jumbotron .action {
+        font-size: 1.5em;
+    }
+}
 /**
  * How
  */
+.how-block {
+    max-width: 960px;
+    margin: 0 auto;
+    position: relative;
+    box-sizing: border-box;
+}
 .how-item {
     margin-top: 2em;
 }
@@ -160,6 +226,54 @@ footer a {
 }
 
 /**
+ * Steps
+ */
+.step-feature.reverse {
+    flex-direction: row-reverse;
+}
+.step-feature {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.step-feature img {
+    padding: 0;
+    display: block;
+    margin: auto;
+    max-width: 440px;
+    width: 100%;
+    margin: 0 30px 0 30px;
+}
+
+.step-feature-text p a {
+    color: #E03A4D;
+}
+.step-feature-text p {
+    line-height: 1.5em;
+}
+.step-feature-text h3 {
+    color: #E03A4D;
+    font-size: 1.6em;
+}
+@media screen and (max-width: 860px) {
+    .step-feature {
+        display: block;
+        align-items: center;
+    }
+    .step-feature p, .step-feature h3 {
+        max-width: 456px;
+        padding: 0 24px;
+        text-align: left;
+        width: 100%;
+        margin: 0 auto;
+    }
+    .step-feature img {
+        margin: 0 auto;
+    }
+}
+/**
  * Sample message
  */
 .sample-message {
@@ -167,10 +281,19 @@ footer a {
     background-color: #E03A4D;
     color: white;
 }
+.sample-message-inner {
+    max-width: 960px;
+    margin: 0 auto;
+    position: relative;
+}
 .sample-message h2,
 .sample-message p {
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
     color: white;
+}
+.sample-message p {
+    font-size: 1.2em;
 }
 .sample-message img {
     border-radius: 2px;
@@ -195,6 +318,11 @@ footer a {
 /**
  * Why
  */
+.why-block {
+    max-width: 960px;
+    margin: 0 auto;
+    position: relative;
+}
 .why-block a {
     text-decoration: none;
     color: #E03A4D;
@@ -203,21 +331,34 @@ footer a {
 .why-block p {
     text-align: center;
 }
-
+.why-block p {
+    font-size: 1.2em;
+}
 /**
  * Love
  */
+.love-block {
+    max-width: 960px;
+    margin: 0 auto;
+    position: relative;
+    padding-top: 0;
+}
 .love-block h2,
 .love-block p {
     text-align: center;
+    font-family: 'Montserrat', sans-serif;
 }
-
+.love-block p {
+    font-size: 1.2em;
+}
 /**
  * Run form
  */
 .run-block {
     padding: 0 2em;
-    margin-bottom: 3em;
+    max-width: 960px;
+    margin: 0 auto;
+    position: relative;
 }
 .run-block h2 {
     margin-top: 2em;
@@ -358,5 +499,50 @@ footer a {
 #snow {
     display: block;
     position: absolute;
-    top: 0;
+    height: 642px;
+    width: 100%;
+    z-index: 1;
+    pointer-events: none;
+}
+
+
+/**
+ * Logo effect
+ */
+@-webkit-keyframes hvr-buzz {
+  50% {
+    -webkit-transform: translateX(3px) rotate(2deg);
+    transform: translateX(3px) rotate(2deg);
+  }
+  100% {
+    -webkit-transform: translateX(-3px) rotate(-2deg);
+    transform: translateX(-3px) rotate(-2deg);
+  }
+}
+@keyframes hvr-buzz {
+  50% {
+    -webkit-transform: translateX(3px) rotate(2deg);
+    transform: translateX(3px) rotate(2deg);
+  }
+  100% {
+    -webkit-transform: translateX(-3px) rotate(-2deg);
+    transform: translateX(-3px) rotate(-2deg);
+  }
+}
+.hvr-buzz {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+}
+.hvr-buzz:hover, .hvr-buzz:focus, .hvr-buzz:active {
+  -webkit-animation-name: hvr-buzz;
+  animation-name: hvr-buzz;
+  -webkit-animation-duration: 0.15s;
+  animation-duration: 0.15s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 }
