Added support link

--- a/Resources/views/index.html.twig
+++ b/Resources/views/index.html.twig
@@ -93,11 +93,9 @@
 
     <div class="content love-block pure-g">
         <div class="pure-u-1">
-            <h2 class="content-head">Enjoy gifts, love and sharing</h2>
-
+            <h2 class="content-head">Enjoy gifts, love and privacy</h2>
             <p>
-                Whatever the reason (Christmas is not the only season in the year),
-                Secret Santa is about sharing and having a good time!
+                Secret Santa is about sharing and having a good time! This application does not persist anything on disk, does not use web analytics, does not need any registration, does not send spam, does not collect any kind of personal information and is integrally <a href="https://github.com/jolicode/slack-secret-santa/">open-source</a>.
             </p>
         </div>
     </div>
