--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -47,17 +47,11 @@
             {% endblock content %}
 
             <footer class="footer is-center">
-                <p>
-                    This application does not persist anything on disk, does not use web analytics, does not need any registration, does not send spam, does not collect any kind of personal information and is integrally <a href="https://github.com/jolicode/slack-secret-santa/">open-source</a>.
-                </p>
-                <p>
-                    Emoji and logo provided free by <a href="http://emojione.com">Emoji One</a>.
-                </p>
+                <a href="mailto:mailto:coucou+secretsanta@jolicode.com" class="support-link"><i class="fa fa-support"></i> Need help? Contact us!</a>
                 <p>
                     Made with ♥ by <a href="http://jolicode.com">JoliCode</a>
                     &mdash;
-                    Support is available via <a href="https://github.com/jolicode/slack-secret-santa/issues">GitHub</a> or
-                    <a href="https://jolicode.com/contact">private contact</a>.
+                    Emoji and logo provided free by <a href="http://emojione.com">Emoji One</a>
                 </p>
             </footer>
         </div>
